<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="activity_label">Activity:</string>
    <string name="add">Add</string>
    <string name="add_collection">Create collection</string>
    <string name="add_genre">Add genre</string>
    <string name="add_homescreen">Add to homescreen</string>
    <string name="add_to_collection">Add to collection</string>
    <string name="adding">Adding</string>
    <string name="all_games">All games</string>
    <string name="all_generations">All generations</string>
    <string name="all_systems">All systems</string>
    <string name="all_types">All types</string>
    <string name="allow_paging">Allow left/right controls to page back/forward</string>
    <string name="allow_playstore">Allow screenshots to be used on the Dig Play Store page</string>
    <string name="already_purchased">You have already purchased that item</string>
    <string name="announcements">Announcements</string>
    <string name="app_name">Dig</string>
    <string name="app_options">App</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ar_hack">Aspect ratio hack</string>
    <string name="arabic">العَرَبِيَّة</string>
    <string name="arcade">Arcade</string>
    <string name="as_carousel">Carousel</string>
    <string name="as_coverflow">Cover Flow</string>
    <string name="as_linear">Linear</string>
    <string name="as_list">List</string>
    <string name="as_vertical">Vertical</string>
    <string name="as_wheel">Wheel</string>
    <string name="ask_played">Would you like to rate the game you just played?</string>
    <string name="aspect16_9">16:9</string>
    <string name="aspect1_1">1:1</string>
    <string name="aspect1_2">1:2</string>
    <string name="aspect2_1">2:1</string>
    <string name="aspect2_3">2:3</string>
    <string name="aspect3_2">3:2</string>
    <string name="aspect3_4">3:4</string>
    <string name="aspect4_3">4:3</string>
    <string name="aspect9_16">9:16</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="audio_rationale">"The 'Record audio' permission is required for the Digger voice assistant"</string>
    <string name="auto">Auto</string>
    <string name="autostart">Auto-start Dig on device boot</string>
    <string name="back">Back</string>
    <string name="background">Background</string>
    <string name="backup_drive">Backup to external app or service</string>
    <string name="backup_fail">Backup creation failed</string>
    <string name="backup_file">Backup to file</string>
    <string name="backup_inform">Database and settings files will be backed up/restored, games and media files will not</string>
    <string name="backup_restore">Backup/restore</string>
    <string name="backup_success">Backup successfully created and stored in your Download folder</string>
    <string name="bad_emu">A name, package, and activity are required</string>
    <string name="billing_error">Billing service error #</string>
    <string name="black">Black</string>
    <string name="blue_covers">Blue/Covers</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="box_cover">Box cover</string>
    <string name="browse_themes">Browse themes</string>
    <string name="bundle_fail">Failed to create theme bundle</string>
    <string name="bundle_theme">Files belonging to the current theme will be bundled into a zip file and stored in your downloads folder.</string>
    <string name="bundle_theme_label">Bundle</string>
    <string name="buy_2_features">Would you like to unlock 2 additional features now for $1</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_label">Cancel</string>
    <string name="cant_delete_theme">"You can't delete the currently displayed theme."</string>
    <string name="change_dosbox_conf">"Within the emulator you'll need to enable Manual Mode and set the config location to:"</string>
    <string name="change_emulator">Change emulator</string>
    <string name="change_icon">Change icon</string>
    <string name="change_scummvm_conf">"While ScummVM is starting select 'CHANGE DEVICE CONFIGURATION', then select 'Data installation location', and specify the directory as:"</string>
    <string name="change_uae_conf">"Within the emulator you'll need to change the configuration path to:"</string>
    <string name="change_view">Change view</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_free">, but you can pick any 3 features for free! Would you like to choose your free features now?</string>
    <string name="choose_media_file">Choose image or video file</string>
    <string name="choose_media_folder">Select media folder</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_to_set">Click to set</string>
    <string name="clone_system">Clone system</string>
    <string name="cloned_systems">Clone systems</string>
    <string name="collection_type">Will this collection contain games or other collections?</string>
    <string name="collections">Collections</string>
    <string name="comment">Comment</string>
    <string name="comments">Comments</string>
    <string name="comments_label">Comments:</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="computers">Computers</string>
    <string name="configure">Configure</string>
    <string name="consoles">Consoles</string>
    <string name="delete">Delete</string>
    <string name="delete_file">Delete this file</string>
    <string name="delete_screenshot">Delete screenshot</string>
    <string name="edit">Edit</string>
    <string name="edit_emulators">Edit emulators</string>
    <string name="edit_genres">Edit genres</string>
    <string name="edit_sort">Edit sort key</string>
    <string name="favorite">Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="generation2">2nd generation</string>
    <string name="generation3">3rd generation</string>
    <string name="generation4">4th generation</string>
    <string name="generation5">5th generation</string>
    <string name="generation6">6th generation</string>
    <string name="generation7">7th generation</string>
    <string name="generation8">8th generation</string>
    <string name="grid">Grid</string>
    <string name="handhelds">Handhelds</string>
    <string name="has_theme_icon">Has theme icon</string>
    <string name="icon_aspect_ratio">Icon aspect ratio</string>
    <string name="icons_only">Icons only</string>
    <string name="ignore_rom">Ignore this file</string>
    <string name="ignore_system">Ignore system</string>
    <string name="import_images">Import</string>
    <string name="just_titles">Just titles</string>
    <string name="last_played">Last played</string>
    <string name="manage_game">Manage game</string>
    <string name="manage_mages">Box covers</string>
    <string name="manage_system">Manage system</string>
    <string name="menu_search">Search</string>
    <string name="merged_games">Merged games</string>
    <string name="min_ratings">Minimum votes</string>
    <string name="most_played">Most played</string>
    <string name="my_most_played">My most played</string>
    <string name="my_rating">My rating</string>
    <string name="my_time_played">My time played</string>
    <string name="no_rating">No rating</string>
    <string name="not_again">"Don't show again"</string>
    <string name="notes">Notes</string>
    <string name="preview_pane">Preview pane</string>
    <string name="rategame">Rate game</string>
    <string name="rating">Rating</string>
    <string name="refresh">Refresh</string>
    <string name="rematch_rom">Rematch file</string>
    <string name="remove_collection">Remove from collection</string>
    <string name="reset">Reset</string>
    <string name="reset_stats">Reset play stats</string>
    <string name="resize">Resize</string>
    <string name="retroarch_overlay">RetroArch overlay</string>
    <string name="rom_paths">ROM paths...</string>
    <string name="scan_system">Scan</string>
    <string name="screenshot">Screenshot</string>
    <string name="screenshots">Screenshots</string>
    <string name="search">Search</string>
    <string name="search_contains">Contains...</string>
    <string name="search_filenames">Search file names</string>
    <string name="search_start">Starts with...</string>
    <string name="share_ratings">Anonymously share your ratings</string>
    <string name="share_stats">Anonymously share your play stats</string>
    <string name="show_not_played">Not played</string>
    <string name="skip_game_info">Skip game info</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_by_date">Date</string>
    <string name="sort_by_played">Played</string>
    <string name="sort_by_title">Title</string>
    <string name="sort_date">Sort by release date</string>
    <string name="sort_name">Sort by name</string>
    <string name="system_default">System default</string>
    <string name="time_played">Time played</string>
    <string name="unignore_files">Unignore files</string>
    <string name="unignore_system">Unignore system</string>
    <string name="use8bit">Use 8-bit font</string>
    <string name="video">Video</string>
    <string name="view">View</string>
    <string name="view_as">View as</string>
</resources>