<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/sort_played" android:title="@string/last_played" app:showAsAction="ifRoom" />
    <item android:id="@id/sort_date" android:title="@string/sort_by_date" app:showAsAction="ifRoom" />
    <item android:id="@id/sort_title" android:title="@string/sort_by_title" app:showAsAction="ifRoom" />
    <item android:id="@id/sort_most_played" android:title="@string/my_most_played" app:showAsAction="ifRoom" />
    <item android:id="@id/sort_time_played" android:title="@string/my_time_played" app:showAsAction="ifRoom" />
    <item android:id="@id/sort_rating" android:title="@string/my_rating" app:showAsAction="ifRoom" />
    <item android:id="@id/sort_crating" android:title="@string/rating" app:showAsAction="ifRoom" />
    <item android:id="@id/sort_cmost_played" android:title="@string/most_played" app:showAsAction="ifRoom" />
    <item android:id="@id/sort_ctime_played" android:title="@string/time_played" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/APKTOOL_DUMMY_96" android:id="@id/sort_by" android:title="@string/sort_by" app:showAsAction="always">
        <menu>
            <item android:id="@id/sort_title2" android:title="@string/sort_by_title" />
            <item android:id="@id/sort_played2" android:title="@string/sort_by_played" />
            <item android:id="@id/sort_most_played2" android:title="@string/my_most_played" />
            <item android:id="@id/sort_time_played2" android:title="@string/my_time_played" />
            <item android:id="@id/sort_rating2" android:title="@string/my_rating" />
            <item android:id="@id/sort_date2" android:title="@string/sort_by_date" />
            <item android:id="@id/sort_cmost_played2" android:title="@string/most_played" />
            <item android:id="@id/sort_ctime_played2" android:title="@string/time_played" />
            <item android:id="@id/sort_crating2" android:title="@string/rating" />
            <item android:id="@id/min_ratings" android:title="@string/min_ratings" />
        </menu>
    </item>
    <item android:icon="@drawable/APKTOOL_DUMMY_95" android:id="@id/search" android:title="@string/menu_search" app:showAsAction="always">
        <menu>
            <item android:id="@id/search_contains" android:title="@string/search_contains" />
            <item android:id="@id/search_start" android:title="@string/search_start" />
            <item android:id="@id/search_filenames" android:title="@string/search_filenames" android:checkable="true" />
        </menu>
    </item>
    <item android:id="@id/show_favorites" android:title="@string/favorites" android:checkable="true" app:showAsAction="never" />
    <item android:id="@id/show_not_played" android:title="@string/show_not_played" android:checkable="true" app:showAsAction="never" />
    <item android:id="@id/add_collection" android:title="@string/add_to_collection" app:showAsAction="never" />
    <item android:id="@id/skip_info" android:title="@string/skip_game_info" android:checkable="true" app:showAsAction="never" />
    <item android:id="@id/view" android:title="@string/view" app:showAsAction="never">
        <menu>
            <item android:id="@id/toggle_pic_type" android:title="@string/screenshots" />
            <item android:id="@id/toggle_merge" android:title="@string/merged_games" />
        </menu>
    </item>
    <item android:id="@id/view_as" android:title="@string/view_as" app:showAsAction="never">
        <menu>
            <item android:id="@id/configure_view" android:title="@string/configure">
                <menu>
                    <item android:id="@id/aspect_ratio" android:title="@string/icon_aspect_ratio">
                        <menu>
                            <item android:id="@id/aspect2_1" android:title="@string/aspect2_1" android:checkable="true" />
                            <item android:id="@id/aspect16_9" android:title="@string/aspect16_9" android:checkable="true" />
                            <item android:id="@id/aspect3_2" android:title="@string/aspect3_2" android:checkable="true" />
                            <item android:id="@id/aspect4_3" android:title="@string/aspect4_3" android:checkable="true" />
                            <item android:id="@id/aspect1_1" android:title="@string/aspect1_1" android:checkable="true" />
                            <item android:id="@id/aspect3_4" android:title="@string/aspect3_4" android:checkable="true" />
                            <item android:id="@id/aspect2_3" android:title="@string/aspect2_3" android:checkable="true" />
                            <item android:id="@id/aspect9_16" android:title="@string/aspect9_16" android:checkable="true" />
                            <item android:id="@id/aspect1_2" android:title="@string/aspect1_2" android:checkable="true" />
                        </menu>
                    </item>
                    <item android:id="@id/use_8bit" android:title="@string/use8bit" android:checkable="true" app:showAsAction="never" />
                    <item android:id="@id/icons_only" android:title="@string/icons_only" android:checkable="true" app:showAsAction="never" />
                    <item android:id="@id/resize" android:title="@string/resize" />
                </menu>
            </item>
            <item android:id="@id/view_grid" android:title="@string/grid" />
            <item android:id="@id/as_list" android:title="@string/as_list" />
            <item android:id="@id/as_carousel" android:title="@string/as_carousel" />
            <item android:id="@id/as_coverflow" android:title="@string/as_coverflow" />
            <item android:id="@id/as_wheel" android:title="@string/as_wheel" />
            <item android:id="@id/as_linear" android:title="@string/as_linear" />
            <item android:id="@id/view_titles" android:title="@string/just_titles" />
            <item android:id="@id/as_vertical" android:title="@string/as_vertical" />
        </menu>
    </item>
    <item android:id="@id/set_preview_pane" android:title="@string/preview_pane" app:showAsAction="never" />
    <item android:id="@id/add_homescreen" android:title="@string/add_homescreen" app:showAsAction="never" />
    <item android:id="@id/manage_system" android:title="@string/manage_system" app:showAsAction="never">
        <menu>
            <item android:id="@id/select_emulator" android:title="@string/change_emulator">
                <menu />
            </item>
            <item android:id="@id/use_retroarch" android:title="">
                <menu>
                    <item android:id="@id/use_default_ra" android:title="" />
                    <item android:id="@id/use_ra32" android:title="" />
                    <item android:id="@id/use_ra64" android:title="" />
                </menu>
            </item>
            <item android:id="@id/edit_emulators" android:title="@string/edit_emulators" />
            <item android:id="@id/manage_images" android:title="@string/manage_mages" app:showAsAction="never">
                <menu>
                    <group>
                        <item android:id="@id/refresh_covers" android:title="@string/refresh" />
                        <item android:id="@id/reset_covers" android:title="@string/reset" />
                        <item android:id="@id/import_images" android:title="@string/import_images" />
                    </group>
                </menu>
            </item>
            <item android:id="@id/select_rom_paths" android:title="@string/rom_paths" />
            <item android:id="@id/scan_system" android:title="@string/scan_system" />
            <item android:id="@id/unignore" android:title="@string/unignore_files" />
            <item android:id="@id/ignore_system" android:title="@string/ignore_system" />
            <item android:id="@id/unignore_system" android:title="@string/unignore_system" />
            <item android:id="@id/retroarch_overlay" android:title="@string/retroarch_overlay" />
        </menu>
    </item>
</menu>