<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/sort_name" android:title="@string/sort_by_title" app:showAsAction="ifRoom" />
    <item android:id="@id/sort_date" android:title="@string/sort_by_date" app:showAsAction="ifRoom" />
    <item android:id="@id/view_as" android:title="@string/view_as" app:showAsAction="never">
        <menu>
            <item android:id="@id/configure_view" android:title="@string/configure">
                <menu>
                    <item android:id="@id/aspect_ratio" android:title="@string/icon_aspect_ratio">
                        <menu>
                            <item android:id="@id/aspect2_1" android:title="@string/aspect2_1" android:checkable="true" />
                            <item android:id="@id/aspect16_9" android:title="@string/aspect16_9" android:checkable="true" />
                            <item android:id="@id/aspect3_2" android:title="@string/aspect3_2" android:checkable="true" />
                            <item android:id="@id/aspect4_3" android:title="@string/aspect4_3" android:checkable="true" />
                            <item android:id="@id/aspect1_1" android:title="@string/aspect1_1" android:checkable="true" />
                            <item android:id="@id/aspect3_4" android:title="@string/aspect3_4" android:checkable="true" />
                            <item android:id="@id/aspect2_3" android:title="@string/aspect2_3" android:checkable="true" />
                            <item android:id="@id/aspect9_16" android:title="@string/aspect9_16" android:checkable="true" />
                            <item android:id="@id/aspect1_2" android:title="@string/aspect1_2" android:checkable="true" />
                        </menu>
                    </item>
                    <item android:id="@id/use_8bit" android:title="@string/use8bit" android:checkable="true" app:showAsAction="never" />
                    <item android:id="@id/icons_only" android:title="@string/icons_only" android:checkable="true" app:showAsAction="never" />
                    <item android:id="@id/resize" android:title="@string/resize" />
                </menu>
            </item>
            <item android:id="@id/view_grid" android:title="@string/grid" />
            <item android:id="@id/as_list" android:title="@string/as_list" />
            <item android:id="@id/as_carousel" android:title="@string/as_carousel" />
            <item android:id="@id/as_coverflow" android:title="@string/as_coverflow" />
            <item android:id="@id/as_wheel" android:title="@string/as_wheel" />
            <item android:id="@id/as_linear" android:title="@string/as_linear" />
            <item android:id="@id/view_titles" android:title="@string/just_titles" />
            <item android:id="@id/as_vertical" android:title="@string/as_vertical" />
        </menu>
    </item>
</menu>